Allow to create a new download by sharing the link to the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Youtube Downloader</string>
+    <string name="link_name">Name</string>
+    <string name="set_name">Set the link name</string>
 </resources>
