--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Youtube Downloader</string>
     <string name="link_name">Name</string>
     <string name="set_name">Set the link name</string>
+    <string name="link">Link</string>
+    <string name="add_link">Add link</string>
 </resources>
